force-app/main/default/objects/User/fields/Branch_Office__c.field-meta.xml
<CustomField>
    <fullName>Branch_Office__c</fullName>
    <description>Custom Picklist for Users on Branch Offices</description>
    <label>Branch Office</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CompanySelectorAux__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABADIA DE GOIÁS</fullName>
            </value>
            <value>
                <fullName>ABADIANIA</fullName>
            </value>
            <value>
                <fullName>ABAIARA</fullName>
            </value>
            <value>
                <fullName>ACARAPE</fullName>
            </value>
            <value>
                <fullName>ACARAU</fullName>
            </value>
            <value>
                <fullName>ACOPIARA</fullName>
            </value>
            <value>
                <fullName>ACREUNA</fullName>
            </value>
            <value>
                <fullName>ADELÂNDIA</fullName>
            </value>
            <value>
                <fullName>ÁGUA FRIA DE GOIÁS</fullName>
            </value>
            <value>
                <fullName>AGUA LIMPA</fullName>
            </value>
            <value>
                <fullName>AGUAS LINDAS DE GOIAS</fullName>
            </value>
            <value>
                <fullName>AIUABA</fullName>
            </value>
            <value>
                <fullName>ALCANTARA</fullName>
            </value>
            <value>
                <fullName>ALCANTARA2</fullName>
            </value>
            <value>
                <fullName>ALDEOTA</fullName>
            </value>
            <value>
                <fullName>ALEXANIA</fullName>
            </value>
            <value>
                <fullName>ALOANDIA</fullName>
            </value>
            <value>
                <fullName>ALTANEIRA</fullName>
            </value>
            <value>
                <fullName>ALTO HORIZONTE</fullName>
            </value>
            <value>
                <fullName>ALTO PARAISO</fullName>
            </value>
            <value>
                <fullName>ALTO SANTO</fullName>
            </value>
            <value>
                <fullName>ALVORADA DO NORTE</fullName>
            </value>
            <value>
                <fullName>AMARALINA</fullName>
            </value>
            <value>
                <fullName>AMERICANO DO BRASIL</fullName>
            </value>
            <value>
                <fullName>AMONTADA</fullName>
            </value>
            <value>
                <fullName>AMORINOPOLIS</fullName>
            </value>
            <value>
                <fullName>ANAPOLIS</fullName>
            </value>
            <value>
                <fullName>ANGRA DOS REIS</fullName>
            </value>
            <value>
                <fullName>ANHANGUERA</fullName>
            </value>
            <value>
                <fullName>ANICUNS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>