force-app/main/default/objects/User/fields/ChangePassword__c.field-meta.xml
<CustomField>
    <fullName>ChangePassword__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I change the passwords in the past</description>
    <label>ChangePassword</label>
    <type>Checkbox</type>
</CustomField>