force-app/main/default/objects/User/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Indicates the channel user</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>