force-app/main/default/objects/User/fields/CNT_Code_Executive__c.field-meta.xml
<CustomField>
    <fullName>CNT_Code_Executive__c</fullName>
    <label>Code Executive</label>
    <length>10</length>
    <type>Text</type>
</CustomField>