force-app/main/default/objects/User/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Indicates the user company</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>