force-app/main/default/objects/User/fields/CompanyP__c.field-meta.xml
<CustomField>
    <fullName>CompanyP__c</fullName>
    <description>Indicate the Company associated with a user, is dependant from Country</description>
    <label>CompanyP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>