force-app/main/default/objects/User/fields/CompanySelectorAux__c.field-meta.xml
<CustomField>
    <fullName>CompanySelectorAux__c</fullName>
    <label>CompanySelectorAux</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMPLA</fullName>
            </value>
            <value>
                <fullName>COELCE</fullName>
            </value>
            <value>
                <fullName>CELG</fullName>
            </value>
            <value>
                <fullName>ENELSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>