force-app/main/default/objects/User/fields/IdentityNumber__c.field-meta.xml
<CustomField>
    <fullName>IdentityNumber__c</fullName>
    <description>Indicates the user Identity number</description>
    <label>Identity Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>