force-app/main/default/objects/User/fields/Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>Internal_Code__c</fullName>
    <label>Internal Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>