force-app/main/default/objects/User/fields/Internal_User_Category__c.field-meta.xml
<CustomField>
    <fullName>Internal_User_Category__c</fullName>
    <label>Internal User Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User (default)</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Key Account Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>