force-app/main/default/objects/User/fields/IsQueu__c.field-meta.xml
<CustomField>
    <fullName>IsQueu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the user corresponds to a caso queu.</description>
    <inlineHelpText>Mark as true when creating a queu.</inlineHelpText>
    <label>IsQueu</label>
    <type>Checkbox</type>
</CustomField>