force-app/main/default/objects/User/fields/LockedUntil__c.field-meta.xml
<CustomField>
    <fullName>LockedUntil__c</fullName>
    <description>Representa el horario o fecha en que el usuario puede intentar loguearse de nuevo segun la cantidad de intentos fallidos</description>
    <label>LockedUntil</label>
    <type>DateTime</type>
</CustomField>