force-app/main/default/objects/User/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>