force-app/main/default/objects/User/fields/Multisesion_Activa__c.field-meta.xml
<CustomField>
    <fullName>Multisesion_Activa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to be used in order to skip the validation for just one active session</description>
    <inlineHelpText>Mark it as TRUE if the user must be allowed to have several sessions</inlineHelpText>
    <label>Multisesion Activa</label>
    <type>Checkbox</type>
</CustomField>