force-app/main/default/objects/User/fields/NE__SessionId__c.field-meta.xml
<CustomField>
    <fullName>NE__SessionId__c</fullName>
    <formula>$Api.Session_ID</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SessionId</label>
    <type>Text</type>
</CustomField>