force-app/main/default/objects/User/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAN001</fullName>
            </value>
            <value>
                <fullName>CAN002</fullName>
            </value>
            <value>
                <fullName>CAN003</fullName>
            </value>
            <value>
                <fullName>CAN004</fullName>
            </value>
            <value>
                <fullName>CAN005</fullName>
            </value>
            <value>
                <fullName>CAN006</fullName>
            </value>
            <value>
                <fullName>CAN007</fullName>
            </value>
            <value>
                <fullName>CAN008</fullName>
            </value>
            <value>
                <fullName>CAN009</fullName>
            </value>
            <value>
                <fullName>CAN010</fullName>
            </value>
            <value>
                <fullName>CAN011</fullName>
            </value>
            <value>
                <fullName>CAN012</fullName>
            </value>
            <value>
                <fullName>CAN013</fullName>
            </value>
            <value>
                <fullName>CAN014</fullName>
            </value>
            <value>
                <fullName>CAN015</fullName>
            </value>
            <value>
                <fullName>CAN016</fullName>
            </value>
            <value>
                <fullName>CAN017</fullName>
            </value>
            <value>
                <fullName>CAN018</fullName>
            </value>
            <value>
                <fullName>CAN019</fullName>
            </value>
            <value>
                <fullName>CAN020</fullName>
            </value>
            <value>
                <fullName>CAN021</fullName>
            </value>
            <value>
                <fullName>CAN022</fullName>
            </value>
            <value>
                <fullName>CAN023</fullName>
            </value>
            <value>
                <fullName>CAN024</fullName>
            </value>
            <value>
                <fullName>CAN025</fullName>
            </value>
            <value>
                <fullName>CAN026</fullName>
            </value>
            <value>
                <fullName>CAN027</fullName>
            </value>
            <value>
                <fullName>CAN087</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>