force-app/main/default/objects/User/fields/Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Id__c</fullName>
    <formula>IF(Profile.Name=&apos;Customer Community SGE&apos; , CASESAFEID(Contact.Account.Id),CASESAFEID(SGE_Login_As__r.Contact.AccountId))</formula>
    <label>Parent Account Id</label>
    <type>Text</type>
</CustomField>