force-app/main/default/objects/User/fields/Password_AP_System__c.field-meta.xml
<CustomField>
    <fullName>Password_AP_System__c</fullName>
    <description>Password to access to AP external system</description>
    <label>Password AP System</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>