force-app/main/default/objects/User/fields/Premium_User_SGP__c.field-meta.xml
<CustomField>
    <fullName>Premium_User_SGP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium User SGEf</label>
    <type>Checkbox</type>
</CustomField>