force-app/main/default/objects/User/fields/QSF_LastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>QSF_LastLoginDate__c</fullName>
    <label>LastLoginDate</label>
    <type>DateTime</type>
</CustomField>