force-app/main/default/objects/User/fields/QSF_Office__c.field-meta.xml
<CustomField>
    <fullName>QSF_Office__c</fullName>
    <label>Office</label>
    <length>50</length>
    <type>Text</type>
</CustomField>