force-app/main/default/objects/User/fields/QSF_Office_Id__c.field-meta.xml
<CustomField>
    <fullName>QSF_Office_Id__c</fullName>
    <label>Office Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>