force-app/main/default/objects/User/fields/QSF_Place__c.field-meta.xml
<CustomField>
    <fullName>QSF_Place__c</fullName>
    <label>Place</label>
    <length>50</length>
    <type>Text</type>
</CustomField>