force-app/main/default/objects/User/fields/QSF_Place_Id__c.field-meta.xml
<CustomField>
    <fullName>QSF_Place_Id__c</fullName>
    <label>Place Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>