force-app/main/default/objects/User/fields/QSF_Quenda_User_Id__c.field-meta.xml
<CustomField>
    <fullName>QSF_Quenda_User_Id__c</fullName>
    <description>Identificador de usuario interno de Quenda utilizado para las llamadas a WS</description>
    <label>Quenda User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>