force-app/main/default/objects/User/fields/Qualifies_for_Auto_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Qualifies_for_Auto_Deactivation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check is meant to identify the users that are subect to be auto-deactivated if they&apos;re not logged in an specified period of time</description>
    <label>Qualifies for Auto-Deactivation</label>
    <type>Checkbox</type>
</CustomField>