force-app/main/default/objects/User/fields/SGE_Case_visibility__c.field-meta.xml
<CustomField>
    <fullName>SGE_Case_visibility__c</fullName>
    <formula>CASESAFEID(IF($Profile.Name ==&apos;SGE Gestor&apos;, SGE_Login_As__c, Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGE Case visibility</label>
    <type>Text</type>
</CustomField>