force-app/main/default/objects/User/fields/SGE_Login_As__c.field-meta.xml
<CustomField>
    <fullName>SGE_Login_As__c</fullName>
    <label>SGE Login As</label>
    <relationshipName>Coordinator</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>