force-app/main/default/objects/User/fields/SubManagement__c.field-meta.xml
<CustomField>
    <fullName>SubManagement__c</fullName>
    <description>Contains submanagement name for queu users.</description>
    <inlineHelpText>Contains submanagement name for queu users.</inlineHelpText>
    <label>SubManagement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>