force-app/main/default/objects/User/fields/typeUser__c.field-meta.xml
<CustomField>
    <fullName>typeUser__c</fullName>
    <description>type authentification the user(salesforce,facebook, etc)</description>
    <label>typeUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>