force-app/main/default/objects/User/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <description>Field to store the UniqueId value related to the new UniqueId project</description>
    <externalId>true</externalId>
    <inlineHelpText>Identificador UniqueId</inlineHelpText>
    <label>UniqueId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>