force-app/main/default/objects/User/fields/Unity__c.field-meta.xml
<CustomField>
    <fullName>Unity__c</fullName>
    <description>Indicates the Unity of the call center related with a user</description>
    <label>Unity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Callcenter Konecta</fullName>
            </value>
            <value>
                <fullName>Callcenter DTS</fullName>
            </value>
            <value>
                <fullName>OF.COM. APOQUINDO</fullName>
            </value>
            <value>
                <fullName>OF.COM. INDEPENDENCIA</fullName>
            </value>
            <value>
                <fullName>OF.COM. COLINA</fullName>
            </value>
            <value>
                <fullName>OF.COM. LA CISTERNA</fullName>
            </value>
            <value>
                <fullName>OF.COM. LA FLORIDA</fullName>
            </value>
            <value>
                <fullName>OF.COM. LO PRADO</fullName>
            </value>
            <value>
                <fullName>OF.COM. MAC-IVER</fullName>
            </value>
            <value>
                <fullName>OF.COM. MAIPU</fullName>
            </value>
            <value>
                <fullName>OF.COM. MALL PLAZA NORTE</fullName>
            </value>
            <value>
                <fullName>OF.COM. MATUCANA</fullName>
            </value>
            <value>
                <fullName>OF.COM. METRO U.DE CHILE</fullName>
            </value>
            <value>
                <fullName>OF.COM. ÑUÑOA</fullName>
            </value>
            <value>
                <fullName>OF.COM. PROVIDENCIA</fullName>
            </value>
            <value>
                <fullName>OF.COM. SAN RAMON</fullName>
            </value>
            <value>
                <fullName>Callcenter Surasistencia</fullName>
            </value>
            <value>
                <fullName>Callcenter Helpbank</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>