force-app/main/default/objects/User/fields/User_Facebook_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Facebook_Id__c</fullName>
    <description>save id the facebook of user</description>
    <label>User_Facebook_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>