force-app/main/default/objects/User/validationRules/User_Company_must_be_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Company_must_be_valid</fullName>
    <active>true</active>
    <description>Checks if the user Company is included in the valid list and also associated to the proper country.</description>
    <errorConditionFormula>OR(
AND( Country__c = &quot;CHILE&quot;,  NOT(CompanyP__c = &quot;ENEL DISTRIBUCION CHILE&quot;),NOT(CompanyP__c = &quot;LUZ ANDES&quot;), NOT(CompanyP__c=&quot;ELECTRICA DE COLINA&quot; ), NOT(CompanyP__c = &quot;eSolutions&quot;)),

AND( Country__c = &quot;BRASIL&quot;,  NOT(CompanyP__c = &quot;CACHOIRA&quot;),NOT(CompanyP__c = &quot;CELG&quot;),NOT(CompanyP__c = &quot;AMPLA&quot;),NOT(CompanyP__c = &quot;COELCE&quot;),NOT(CompanyP__c=&quot;ENELSP&quot; ),NOT(CompanyP__c=&quot;PRATIL&quot; ), NOT(CompanyP__c = &quot;eSolutions&quot;)),

AND( Country__c = &quot;PERU&quot;,  NOT(CompanyP__c = &quot;EDELNOR&quot;), NOT(CompanyP__c = &quot;eSolutions&quot;)),

AND( Country__c = &quot;COLOMBIA&quot;,  NOT(CompanyP__c = &quot;CODENSA&quot;), NOT(CompanyP__c = &quot;eSolutions&quot;)),

AND( Country__c = &quot;ARGENTINA&quot;,  NOT(CompanyP__c = &quot;EDESUR&quot;), NOT(CompanyP__c = &quot;eSolutions&quot;)),

AND( Country__c = &quot;ITALY&quot;, NOT(CompanyP__c = &quot;eSolutions&quot;)),

AND( Country__c = &quot;SOUTH AFRICA&quot;, NOT(CompanyP__c = &quot;eSolutions&quot;)),

AND( Country__c = &quot;ROMANIA&quot;, NOT(CompanyP__c = &quot;eSolutions&quot;)),

AND( Country__c = &quot;GLOBAL&quot;, NOT(CompanyP__c = &quot;eSolutions&quot;))

)</errorConditionFormula>
    <errorMessage>Your company must be valid</errorMessage>
</ValidationRule>