force-app/main/default/objects/User/listViews/AllUsers_Chile.listView-meta.xml
<ListView>
    <fullName>AllUsers_Chile</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>Country__c</columns>
    <columns>Origin__c</columns>
    <columns>Channel__c</columns>
    <columns>Unity__c</columns>
    <columns>CREATED_BY_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>HAS_USER_VERIFIED_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ADDRESS_COUNTRY</field>
        <operation>equals</operation>
        <value>Chile</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>APP</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>notContain</operation>
        <value>PEAK</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>lessOrEqual</operation>
        <value>10/31/2018 12:00 AM</value>
    </filters>
    <label>+60 days no Access_SF_Chile</label>
    <language>es</language>
</ListView>