force-app/main/default/objects/User/listViews/AllUsersB2CPeru.listView-meta.xml
<ListView>
    <fullName>AllUsersB2CPeru</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>Pe70194044</value>
    </filters>
    <label>All Users B2C Perú</label>
    <language>es_PE</language>
</ListView>