force-app/main/default/objects/User/listViews/criado_em.listView-meta.xml
<ListView>
    <fullName>criado_em</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <label>criado em</label>
    <language>pt_BR</language>
</ListView>