force-app/main/default/objects/User/listViews/eMobility.listView-meta.xml
<ListView>
    <fullName>eMobility</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>integra</value>
    </filters>
    <label>eMobility</label>
    <language>en_US</language>
</ListView>