force-app/main/default/objects/User/listViews/PROGRAMAS_ESPECIALES.listView-meta.xml
<ListView>
    <fullName>PROGRAMAS_ESPECIALES</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>inteligente</value>
    </filters>
    <label>PROGRAMAS ESPECIALES</label>
    <language>en_US</language>
</ListView>