force-app/main/default/objects/User/listViews/PSVA.listView-meta.xml
<ListView>
    <fullName>PSVA</fullName>
    <booleanFilter>1 OR 2  OR 3 OR 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Brasil Sales Representative</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>52936395</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>equals</operation>
        <value>migracion@enellatam.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>release</value>
    </filters>
    <label>PSVA</label>
    <language>es</language>
    <sharedTo>
        <group>PSVAs</group>
    </sharedTo>
</ListView>