force-app/main/default/objects/User/listViews/PSVA_Bombero.listView-meta.xml
<ListView>
    <fullName>PSVA_Bombero</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>Origin__c</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>pe70907849@enel.com</value>
    </filters>
    <label>PSVA Bombero</label>
    <language>en_US</language>
</ListView>