force-app/main/default/objects/User/listViews/UsuariosBR_fuso_chile.listView-meta.xml
<ListView>
    <fullName>UsuariosBR_fuso_chile</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>Origin__c</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
    <columns>TIMEZONE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>BRASIL</value>
    </filters>
    <filters>
        <field>TIMEZONE</field>
        <operation>equals</operation>
        <value>87</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Usuários brasil com horario chile</label>
    <language>pt_BR</language>
</ListView>